Updated home page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
-        Welcome to Simple WebApp
+        <h1>Simple Web App</h1>
+	<p>Welcome to this simple web application</p>
     </body>
 </html>
