--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,96 @@
-<html>
-    <body>
-        <h1>Simple Web App</h1>
-	<p>Welcome to this simple web application</p>
-    </body>
+<html ng-app="locationManagerApp">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <title>Ring2Park Parking Location Manager</title>
+    <link href='./css/style.css' rel="stylesheet" type="text/css" />
+    <link href='./css/css/font-awesome.css' rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+    <script data-require="angular.js@*" data-semver="1.3.0-beta.14" src="./js/angular.min.js"></script>
+    <script data-require="angular-animate@*" data-semver="1.3.0-beta.14" src="./js/angular-animate.min.js"></script>
+    <script type="text/javascript" src="./js/app.js"></script>
+</head>
+<body>
+
+<div ng-controller="locationManagerController">
+    <h2 class="page-title">Ring2Park Parking Location Manager</h2>
+    <h4 class="page-title">This application is used to add, edit or delete parking locations.</h4>
+    <div id="location-panel" class="fadein fadeout showpanel panel"  ng-show="toggle">
+        <div class="panel-heading">
+            <i class="panel-title-icon fa fa-tasks"></i>
+            <span class="panel-title">Parking Locations</span>
+            <div class="panel-heading-controls">
+                <button ng-click="toggle = !toggle" class="btn-panel">Add New Location</button>
+                <button class="btn-panel" confirmed-click="deleteLocations()" ng-confirm-click="Are you sure you want to delete the selected locations?">Delete Locations</button>
+            </div>
+        </div>
+        <div class="panel-body">
+            <div class="location" ng-repeat="location in locations">
+                <div class="action-checkbox">
+                    <!--input id="{{location._links.self.href}}" type="checkbox" value="{{location._links.self.href}}" ng-checked="selection.indexOf(location._links.self.href) > -1" ng-click="toggleSelection(location._links.self.href)" />
+                    <label for="{{location._links.self.href}}" ></label-->
+                </div>
+                <div class="location-title">
+                    <a id="{{location._links.self.href}}" href="#" ng-click="editLocation(location._links.self.href)">
+                        {{location.name}}
+                    </a>
+                </div>
+                <span class="location-address">{{location.address}},{{location.city}},{{location.state}},{{location.zip}},{{location.country}}</span>
+                <span class="location-price">{{location.currency}} {{location.price}}</span>
+            </div>
+        </div>
+    </div>
+    <div id="add-location-panel" class="fadein fadeout addpanel panel" ng-hide="toggle">
+        <div class="panel-heading">
+            <i class="panel-title-icon fa fa-plus"></i>
+            <span class="panel-title">Add Location</span>
+            <div class="panel-heading-controls">
+                <button ng-click="toggle = !toggle" class="btn-panel">Show All Locations</button>
+            </div>
+        </div>
+        <div class="panel-body">
+            <div class="location" >
+                <table class="add-location">
+                    <tr>
+                        <td>Name:</td>
+                        <td><input type="text" ng-model="locationName"/></td>
+                    </tr>
+                    <tr>
+                        <td>Address:</td>
+                        <td><input type="text" ng-model="locationAddress"/></td>
+                    </tr>
+                    <tr>
+                        <td>City:</td>
+                        <td><input type="text" ng-model="locationCity"/></td>
+                    </tr>
+                    <tr>
+                        <td>Zip/Postal Code:</td>
+                        <td><input type="text" ng-model="locationZip"/></td>
+                    </tr>
+                    <tr>
+                        <td>State:</td>
+                        <td><input type="text" ng-model="locationState"/></td>
+                    </tr>
+                    <tr>
+                        <td>Country:</td>
+                        <td><input type="text" ng-model="locationCountry"/></td>
+                    </tr>
+                    <tr>
+                        <td>Price:</td>
+                        <td><input type="text" ng-model="locationPrice"/></td>
+                    </tr>
+                    <tr>
+                        <td>Currency:</td>
+                        <td><input type="text" ng-model="locationCurrency"/></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button ng-click="addLocation()" class="btn-panel-big">Add New Location</button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
