--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,15 +4,14 @@
     <title>Ring2Park Parking Location Manager</title>
     <link href='./css/style.css' rel="stylesheet" type="text/css" />
     <link href='./css/css/font-awesome.css' rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
-    <script data-require="angular.js@*" data-semver="1.3.0-beta.14" src="./js/angular.min.js"></script>
-    <script data-require="angular-animate@*" data-semver="1.3.0-beta.14" src="./js/angular-animate.min.js"></script>
+    <script data-require="angular.js@*" data-semver="1.3.8" src="./js/angular.min.js"></script>
+    <script data-require="angular-animate@*" data-semver="1.3.8" src="./js/angular-animate.min.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
 </head>
 <body>
 
 <div ng-controller="locationManagerController">
-    <h2 class="page-title">Ring2Park Parking Location Manager</h2>
+    <h2 class="page-title">Parking Location Manager</h2>
     <h4 class="page-title">This application is used to add, edit or delete parking locations.</h4>
     <div id="location-panel" class="fadein fadeout showpanel panel"  ng-show="toggle">
         <div class="panel-heading">
