--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,8 @@
-<html ng-app="locationManagerApp">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org" ng-app="locationManagerApp">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-    <title>Ring2Park Parking Location Manager</title>
+    <title th:text="${name}"/>
     <link href='./css/style.css' rel="stylesheet" type="text/css" />
     <link href='./css/css/font-awesome.css' rel="stylesheet" type="text/css" />
     <script data-require="angular.js@*" data-semver="1.3.8" src="./js/angular.min.js"></script>
@@ -11,26 +12,25 @@
 <body>
 
 <div ng-controller="locationManagerController">
-    <h2 class="page-title">Parking Location Manager</h2>
-    <h4 class="page-title">This application is used to add, edit or delete parking locations.</h4>
+    <h2 class="page-title" th:text="${name}"/>
+    <h4 class="page-title" th:text="${description}"/>
     <div id="location-panel" class="fadein fadeout showpanel panel"  ng-show="toggle">
         <div class="panel-heading">
             <i class="panel-title-icon fa fa-tasks"></i>
             <span class="panel-title">Parking Locations</span>
             <div class="panel-heading-controls">
-                <button ng-click="toggle = !toggle" class="btn-panel">Add New Location</button>
-                <button class="btn-panel" confirmed-click="deleteLocations()" ng-confirm-click="Are you sure you want to delete the selected locations?">Delete Locations</button>
+                <button ng-click="loadLocation()" class="btn-panel">Add New Location</button>
             </div>
         </div>
         <div class="panel-body">
             <div class="location" ng-repeat="location in locations">
-                <div class="action-checkbox">
-                    <!--input id="{{location._links.self.href}}" type="checkbox" value="{{location._links.self.href}}" ng-checked="selection.indexOf(location._links.self.href) > -1" ng-click="toggleSelection(location._links.self.href)" />
-                    <label for="{{location._links.self.href}}" ></label-->
-                </div>
                 <div class="location-title">
-                    <a id="{{location._links.self.href}}" href="#" ng-click="editLocation(location._links.self.href)">
+                    <a id="{{location._links.self.href}}" href="#" ng-click="loadLocation(location._links.self.href)">
                         {{location.name}}
+                    </a>
+                    &nbsp;
+                    <a href="#" confirmed-click="deleteLocation(location._links.self.href)" ng-confirm-click="Are you sure you want to delete the selected locations?">
+                        <i class="fa fa-trash"></i>
                     </a>
                 </div>
                 <span class="location-address">{{location.address}},{{location.city}},{{location.state}},{{location.zip}},{{location.country}}</span>
@@ -41,7 +41,7 @@
     <div id="add-location-panel" class="fadein fadeout addpanel panel" ng-hide="toggle">
         <div class="panel-heading">
             <i class="panel-title-icon fa fa-plus"></i>
-            <span class="panel-title">Add Location</span>
+            <span class="panel-title">Location</span>
             <div class="panel-heading-controls">
                 <button ng-click="toggle = !toggle" class="btn-panel">Show All Locations</button>
             </div>
@@ -83,7 +83,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <button ng-click="addLocation()" class="btn-panel-big">Add New Location</button>
+                            <button ng-click="saveLocation(locationUri)" class="btn-panel-big">Save Location</button>
                         </td>
                     </tr>
                 </table>
