--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,10 +3,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <title th:text="${name}"/>
+    <link href='./css/bootstrap.min.css' rel="stylesheet" type="text/css" />
     <link href='./css/style.css' rel="stylesheet" type="text/css" />
-    <link href='./css/css/font-awesome.css' rel="stylesheet" type="text/css" />
     <script data-require="angular.js@*" data-semver="1.3.8" src="./js/angular.min.js"></script>
     <script data-require="angular-animate@*" data-semver="1.3.8" src="./js/angular-animate.min.js"></script>
+    <script type="text/javascript" src ="./js/bootstrap.min.js"/>
     <script type="text/javascript" src="./js/app.js"></script>
 </head>
 <body>
@@ -16,8 +17,7 @@
     <h4 class="page-title" th:text="${description}"/>
     <div id="location-panel" class="fadein fadeout showpanel panel"  ng-show="toggle">
         <div class="panel-heading">
-            <i class="panel-title-icon fa fa-tasks"></i>
-            <span class="panel-title">Parking Locations</span>
+            <span class="panel-title"><span class="glyphicon glyphicon-road" aria-hidden="true"></span>Parking Locations</span>
             <div class="panel-heading-controls">
                 <button ng-click="loadLocation()" class="btn-panel">Add New Location</button>
             </div>
@@ -30,7 +30,7 @@
                     </a>
                     &nbsp;
                     <a href="#" confirmed-click="deleteLocation(location._links.self.href)" ng-confirm-click="Are you sure you want to delete the selected locations?">
-                        <i class="fa fa-trash"></i>
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                     </a>
                 </div>
                 <span class="location-address">{{location.address}},{{location.city}},{{location.state}},{{location.zip}},{{location.country}}</span>
@@ -40,8 +40,7 @@
     </div>
     <div id="add-location-panel" class="fadein fadeout addpanel panel" ng-hide="toggle">
         <div class="panel-heading">
-            <i class="panel-title-icon fa fa-plus"></i>
-            <span class="panel-title">Location</span>
+            <span class="panel-title"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Location</span>
             <div class="panel-heading-controls">
                 <button ng-click="toggle = !toggle" class="btn-panel">Show All Locations</button>
             </div>
