--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,43 +12,50 @@
     <link href='./css/style.css' rel="stylesheet" type="text/css" />
     <script data-require="angular.js@*" data-semver="1.3.8" src="./js/angular.min.js"></script>
     <script data-require="angular-animate@*" data-semver="1.3.8" src="./js/angular-animate.min.js"></script>
+    <script type="text/javascript" src ="./js/jquery.min.js"/>
     <script type="text/javascript" src ="./js/bootstrap.min.js"/>
     <script type="text/javascript" src="./js/app.js"></script>
 </head>
+
 <body>
 
 <div class="container" ng-controller="locationManagerController">
-    <h2 th:text="${name}"/>
-    <h4 th:text="${description}"/>
-    <div id="location-panel" class="fadein fadeout showpanel panel"  ng-show="toggle">
+    <h2 class="text-center" th:text="${name}"/>
+    <h4 class="text-center" th:text="${description}"/>
+    <div id="location-panel" class="panel panel-default fadein fadeout" ng-show="toggle">
         <div class="panel-heading">
-            <span class="panel-title"><span class="glyphicon glyphicon-road" aria-hidden="true"></span>Parking Locations</span>
-            <div class="panel-heading-controls">
-                <button ng-click="loadLocation()" class="btn-panel">Add New Location</button>
-            </div>
+            <span class="panel-title">
+                <span class="glyphicon glyphicon-road" aria-hidden="true">&nbsp;</span>Parking Locations
+                <button ng-click="loadLocation()" class="btn btn-default pull-right">Add New Location</button>
+            </span>
         </div>
         <div class="panel-body">
-            <div class="location" ng-repeat="location in locations">
-                <div class="location-title">
-                    <a id="{{location._links.self.href}}" href="#" ng-click="loadLocation(location._links.self.href)">
-                        {{location.name}}
-                    </a>
-                    &nbsp;
-                    <a href="#" confirmed-click="deleteLocation(location._links.self.href)" ng-confirm-click="Are you sure you want to delete the selected locations?">
-                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                    </a>
-                </div>
-                <span class="location-address">{{location.address}},{{location.city}},{{location.state}},{{location.zip}},{{location.country}}</span>
-                <span class="location-price">{{location.currency}} {{location.price}}</span>
-            </div>
+            <table class="table table-striped">
+                <thead><th>Name</th><th>Details</th><th>Price</th></thead>
+                <tbody>
+                    <tr class="location" ng-repeat="location in locations">
+                        <td class="location-title">
+                            <a id="{{location._links.self.href}}" href="#" ng-click="loadLocation(location._links.self.href)">
+                                {{location.name}}
+                            </a>
+                            &nbsp;
+                            <a href="#" confirmed-click="deleteLocation(location._links.self.href)" ng-confirm-click="Are you sure you want to delete the selected locations?">
+                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                            </a>
+                        </td>
+                        <td class="location-address">{{location.address}},{{location.city}},{{location.state}},{{location.zip}},{{location.country}}</td>
+                        <td class="location-price">{{location.currency}} {{location.price}}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
-    <div id="add-location-panel" class="fadein fadeout addpanel panel" ng-hide="toggle">
+    <div id="add-location-panel" class="panel panel-default fadein fadeout" ng-hide="toggle">
         <div class="panel-heading">
-            <span class="panel-title"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Location</span>
-            <div class="panel-heading-controls">
-                <button ng-click="toggle = !toggle" class="btn-panel">Show All Locations</button>
-            </div>
+            <span class="panel-title">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true">&nbsp;</span>Location
+                <button ng-click="toggle = !toggle" class="btn btn-default pull-right">Show All Locations</button>
+            </span>
         </div>
         <div class="panel-body">
             <div class="location" >
@@ -95,9 +102,9 @@
         </div>
     </div>
 
-    <footer class="footer">
+    <!--footer class="footer">
         <p>&copy; Company 2015</p>
-    </footer>
+    </footer-->
 
 </div>
 </body>
