--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,8 +25,8 @@
     <div id="location-panel" class="panel panel-default fadein fadeout" ng-show="toggle">
         <div class="panel-heading">
             <span class="panel-title">
-                <span class="glyphicon glyphicon-road" aria-hidden="true">&nbsp;</span>Parking Locations
                 <button ng-click="loadLocation()" class="btn btn-default pull-right">Add New Location</button>
+                <h4><span class="glyphicon glyphicon-road" aria-hidden="true">&nbsp;</span>Parking Locations</h4>
             </span>
         </div>
         <div class="panel-body">
@@ -53,8 +53,8 @@
     <div id="add-location-panel" class="panel panel-default fadein fadeout" ng-hide="toggle">
         <div class="panel-heading">
             <span class="panel-title">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true">&nbsp;</span>Location
                 <button ng-click="toggle = !toggle" class="btn btn-default pull-right">Show All Locations</button>
+                <h4><span class="glyphicon glyphicon-plus" aria-hidden="true">&nbsp;</span>Location</h4>
             </span>
         </div>
         <div class="panel-body">
