SDP-6 - Demo Change 150115

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,7 +25,7 @@
     <div id="location-panel" class="panel panel-default fadein fadeout" ng-show="toggle">
         <div class="panel-heading">
             <span class="panel-title">
-                <button ng-click="loadLocation()" class="btn btn-default pull-right">Add Location</button>
+                <button ng-click="loadLocation()" class="btn btn-default pull-right">Add New Location</button>
                 <h4><span class="glyphicon glyphicon-road" aria-hidden="true">&nbsp;</span>Parking Locations</h4>
             </span>
         </div>
