--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -85,7 +85,7 @@
 
 .panel .panel-body
 {
-	background: beige;
+	/*background: beige;*/
 	margin: 0;
 	padding: 20px;
 	
@@ -116,7 +116,7 @@
 {
 	padding: 8px 0;
 	position: relative;
-	background: beige;
+	/*background: beige;*/
 	margin: 0 -20px;
 	padding-left: 20px;
 	padding-right: 20px;
