--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="locationCurrency" class="col-sm-2 control-label">Currenct</label>
+                        <label for="locationCurrency" class="col-sm-2 control-label">Currency</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="locationCurrency" ng-model="locationCurrency"/>
                         </div>
