--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,16 +1,9 @@
-/*body
-{
-	width:80%;
-	margin-left:auto;
-	margin-right:auto;
-}
-*/
 .showpanel
 {
 	width:50%;
 	margin-right:25%;
 	margin-left:25%;
-	background-color:#39393d!important;
+	/*background-color:#39393d!important;*/
 	border-color: #e2e2e2;
 	border-radius: 2px;
 	
